--- a/EjerciciosJS/Intermedios/exercise8.html
+++ b/EjerciciosJS/Intermedios/exercise8.html
@@ -14,6 +14,6 @@
 	<button onclick="enviarCadena()">Comprobar</button>
 	<button onclick="resetPage()">Reset</button>
 
-	<script src="./ejercicio8.js"></script>
+	<script src="./exercise8.js"></script>
 </body>
 </html>
