--- a/EjerciciosJS/Intermedios/exercise9.html
+++ b/EjerciciosJS/Intermedios/exercise9.html
@@ -34,6 +34,6 @@
 	<div id="columna2" class="columna" style="border-top: 1px solid black; border-bottom: 1px solid black;"><p id="bandera" style="font-size: 5em; display: flex; justify-content: center;">Bandera</p></div>
 	<div id="columna3" class="columna" style="border-top: 1px solid black; border-right: 1px solid black; border-bottom: 1px solid black;"></div>
 
-	<script src="./ejercicio9.js"></script>
+	<script src="./exercise9.js"></script>
 </body>
 </html>
