--- a/EjerciciosJS/Avanzados/exercise7.html
+++ b/EjerciciosJS/Avanzados/exercise7.html
@@ -28,14 +28,13 @@
         </div>
 
         <div style="width: 10em; height: 5em; margin: 1em; display: inline-block; background-color: blue; font-size: 2em;" id="cuadrado3" class="cuadrado"><span id="" style="font-size: 2.5em; display: flex; justify-content: center; text-justify: auto; text-shadow: white 3px -2px;">B</span>
-        <input id="input3" type="range" value="0" min="0" max="255" style="width: 60%" placeholder="Escriba un valor entre 0-255">
+        <input id="input3" type="range" value="0" min="0" max="255" style="width: 60%">
         </div>
     </header>
 
     <div style="background-color: black; width: 6em; height: 5em; display: block; border-radius: 20%; margin-top: -1.5%;" >
         <button type="button" onclick="verifyNumber()" style="width: 5em; height: 2em; margin-left: 15%; margin-top: 40%;">Aceptar</button>
     </div>
-    <div id="avisos" style="display: flex; justify-content: center; font-size: 3em; margin-top: 5%;"></div>
 
     
     <script src="./exercise7.js"></script>
