--- a/LenguajeJS/Fundamentos/example6/miniProgram6_part2.html
+++ b/LenguajeJS/Fundamentos/example6/miniProgram6_part2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body style="background-color: #53c583;">
+<body style="background-color: #c6cc59;">
     <h1>Otra página.</h1>
 </body>
 </html>
